Fix color of popup buttons in Firefox
Broken in
https://github.com/EFForg/privacybadger/commit/b778566afca07949d1cde77242c7d11c0c4703b7#diff-b7fd3030711124fc1aab058f2b22f017e14232627485e8780245a7249901833aL343-L345

--- a/src/skin/popup.css
+++ b/src/skin/popup.css
@@ -52,6 +52,11 @@ a { text-decoration: none }
 
 a:hover { color: #ec9329 }
 
+button {
+    /* needed for Firefox */
+    color: #333;
+}
+
 .clear {
     clear: both;
 }
